FindCSFML for Cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,4 +57,5 @@ install(DIRECTORY include
         DESTINATION .
         COMPONENT devel
         PATTERN ".svn" EXCLUDE)
+install(FILES cmake/Modules/FindCSFML.cmake DESTINATION ${CMAKE_ROOT}/Modules)
 install(FILES license.txt DESTINATION ${INSTALL_MISC_DIR})
