Updated to the new time API (sfTime)

--- a/src/SFML/System/CMakeLists.txt
+++ b/src/SFML/System/CMakeLists.txt
@@ -16,6 +16,8 @@ set(SRC
     ${SRCROOT}/Thread.cpp
     ${SRCROOT}/ThreadStruct.h
     ${INCROOT}/Thread.h
+    ${SRCROOT}/Time.cpp
+    ${INCROOT}/Time.h
     ${INCROOT}/Types.h
 )
 
