Each module now has its own export macro

--- a/src/SFML/Graphics/CMakeLists.txt
+++ b/src/SFML/Graphics/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SRCROOT ${CMAKE_SOURCE_DIR}/src/SFML/Graphics)
 
 # all source files
 set(SRC
+    ${INCROOT}/Export.h
     ${INCROOT}/BlendMode.h
     ${SRCROOT}/CircleShape.cpp
     ${SRCROOT}/CircleShapeStruct.h
