Added readme.txt to the install rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,3 +58,4 @@ install(DIRECTORY include
         COMPONENT devel
         PATTERN ".svn" EXCLUDE)
 install(FILES license.txt DESTINATION ${INSTALL_MISC_DIR})
+install(FILES readme.txt DESTINATION ${INSTALL_MISC_DIR})
