--- a/src/SFML/CMakeLists.txt
+++ b/src/SFML/CMakeLists.txt
@@ -18,8 +18,10 @@ endif()
 
 # find SFML libraries (C++)
 if(SFML_OS_WINDOWS)
-    set(SFML_STATIC_LIBRARIES TRUE)
-    add_definitions(-DSFML_STATIC)
+    if (CSFML_LINK_SFML_STATICALLY)
+        set(SFML_STATIC_LIBRARIES TRUE)
+        add_definitions(-DSFML_STATIC)
+    endif()
 endif()
 find_package(SFML 2 COMPONENTS system window network graphics audio REQUIRED)
 include_directories(${SFML_INCLUDE_DIR})
