--- a/src/SFML/Graphics/CMakeLists.txt
+++ b/src/SFML/Graphics/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SRCROOT ${CMAKE_SOURCE_DIR}/src/SFML/Graphics)
 # all source files
 set(SRC
     ${INCROOT}/Export.h
+    ${SRCROOT}/BlendMode.cpp
     ${INCROOT}/BlendMode.h
     ${SRCROOT}/CircleShape.cpp
     ${SRCROOT}/CircleShapeStruct.h
