Added support for the Font::Info struct

--- a/src/SFML/Graphics/CMakeLists.txt
+++ b/src/SFML/Graphics/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SRC
     ${SRCROOT}/Font.cpp
     ${SRCROOT}/FontStruct.h
     ${INCROOT}/Font.h
+    ${INCROOT}/FontInfo.h
     ${INCROOT}/Glyph.h
     ${SRCROOT}/Image.cpp
     ${SRCROOT}/ImageStruct.h
