Deduplicate code for sfContextSettings (#116)
Deduplicate code for sfContextSettings

--- a/src/SFML/Window/CMakeLists.txt
+++ b/src/SFML/Window/CMakeLists.txt
@@ -6,6 +6,8 @@ set(SRCROOT ${CMAKE_SOURCE_DIR}/src/SFML/Window)
 set(SRC
     ${INCROOT}/Export.h
     ${SRCROOT}/Context.cpp
+    ${SRCROOT}/ContextSettingsInternal.cpp
+    ${SRCROOT}/ContextSettingsInternal.h
     ${SRCROOT}/ContextStruct.h
     ${INCROOT}/Context.h
     ${INCROOT}/Event.h
