configure travis-ci

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,4 +73,4 @@ install(DIRECTORY include
         COMPONENT devel
         PATTERN ".svn" EXCLUDE)
 install(FILES license.txt DESTINATION ${INSTALL_MISC_DIR})
-install(FILES readme.txt DESTINATION ${INSTALL_MISC_DIR})
+install(FILES README.md DESTINATION ${INSTALL_MISC_DIR})
