Add build error for AnyCPU on .NET Framework

--- a/tools/nuget/CSFML/CSFML.csproj
+++ b/tools/nuget/CSFML/CSFML.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <None Pack="True" Include="runtimes/**" PackagePath="runtimes" />
+    <None Pack="True" Include="build/**" PackagePath="build" />
   </ItemGroup>
 
 </Project>
