Implement `sf::Vulkan` functions
https://github.com/SFML/SFML/pull/1557

--- a/src/SFML/Window/CMakeLists.txt
+++ b/src/SFML/Window/CMakeLists.txt
@@ -29,6 +29,8 @@ set(SRC
     ${INCROOT}/Types.h
     ${SRCROOT}/VideoMode.cpp
     ${INCROOT}/VideoMode.h
+    ${SRCROOT}/Vulkan.cpp
+    ${INCROOT}/Vulkan.h
     ${SRCROOT}/Window.cpp
     ${SRCROOT}/WindowStruct.h
     ${INCROOT}/Window.h
