--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         - { name: Windows VS2022, os: windows-2022 }
         - { name: Linux GCC,      os: ubuntu-latest }
         - { name: Linux Clang,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: MacOS,          os: macos-12,      flags: -DSFML_BUILD_FRAMEWORKS=FALSE, prefix: sudo }
+        - { name: MacOS,          os: macos-12,      flags: -DSFML_BUILD_FRAMEWORKS=FALSE }
     steps:
     - name: Install Linux Dependencies
       if: runner.os == 'Linux'
@@ -34,7 +34,7 @@ jobs:
     
     - name: Build SFML
       shell: bash
-      run: ${{matrix.platform.prefix}} cmake --build $GITHUB_WORKSPACE/SFML/build --config Release --target install
+      run: cmake --build $GITHUB_WORKSPACE/SFML/build --config Release --target install
 
     - name: Checkout CSFML
       uses: actions/checkout@v3
