Use Ninja in more CI jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
         - { name: Windows VS2022, os: windows-2022 }
         - { name: Windows ClangCL, os: windows-2022, flags: -T ClangCL }
         - { name: Windows Clang,  os: windows-2022, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: Linux GCC,      os: ubuntu-latest }
-        - { name: Linux Clang,    os: ubuntu-latest, flags: -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: MacOS,          os: macos-12,      flags: -DSFML_BUILD_FRAMEWORKS=FALSE }
+        - { name: Linux GCC,      os: ubuntu-latest, flags: -GNinja }
+        - { name: Linux Clang,    os: ubuntu-latest, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
+        - { name: MacOS,          os: macos-12,      flags: -GNinja -DSFML_BUILD_FRAMEWORKS=FALSE }
 
     steps:
     - name: Get CMake and Ninja
