Add API for `sf::WindowBase`

--- a/src/SFML/Window/CMakeLists.txt
+++ b/src/SFML/Window/CMakeLists.txt
@@ -32,8 +32,11 @@ set(SRC
     ${SRCROOT}/Vulkan.cpp
     ${INCROOT}/Vulkan.h
     ${SRCROOT}/Window.cpp
+    ${SRCROOT}/WindowBase.cpp
     ${SRCROOT}/WindowStruct.h
+    ${SRCROOT}/WindowBaseStruct.h
     ${INCROOT}/Window.h
+    ${INCROOT}/WindowBase.h
     ${INCROOT}/WindowHandle.h
 )
 
