Enable x86 builds for Visual Studio

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,15 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-        - { name: Windows VS2019,  os: windows-2019 }
-        - { name: Windows VS2022,  os: windows-2022 }
-        - { name: Windows ClangCL, os: windows-2022, flags: -T ClangCL }
-        - { name: Windows Clang,   os: windows-2022, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: Linux GCC,       os: ubuntu-22.04, flags: -GNinja }
-        - { name: Linux Clang,     os: ubuntu-22.04, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
-        - { name: MacOS,           os: macos-12,     flags: -GNinja }
+        - { name: Windows VS2019 x86,  os: windows-2019, flags: -AWin32 }
+        - { name: Windows VS2019 x64,  os: windows-2019, flags: -Ax64 }
+        - { name: Windows VS2022 x86,  os: windows-2022, flags: -AWin32 }
+        - { name: Windows VS2022 x64,  os: windows-2022, flags: -Ax64 }
+        - { name: Windows ClangCL,     os: windows-2022, flags: -T ClangCL }
+        - { name: Windows Clang,       os: windows-2022, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
+        - { name: Linux GCC,           os: ubuntu-22.04, flags: -GNinja }
+        - { name: Linux Clang,         os: ubuntu-22.04, flags: -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ }
+        - { name: MacOS,               os: macos-12,     flags: -GNinja }
         type:
         - { name: Debug }
         - { name: Release }
