Include GNUInstallDirs to define CMAKE_INSTALL_LIBDIR
The variable CMAKE_INSTALL_LIBDIR is used to define CSFML_PKGCONFIG_DIR
variable in cmake/Config.cmake file.
Copy-pasted from SFML's CMakeLists.txt file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ csfml_set_option(CMAKE_BUILD_TYPE Release STRING "Choose the type of build (Debu
 # project name
 project(CSFML VERSION 2.6.0)
 
+# we use the paths from the cmake GNUInstallDirs module as defaults
+# you can override these if you like
+# https://cmake.org/cmake/help/latest/module/GNUInstallDirs.html
+include(GNUInstallDirs)
+
 # include the configuration file
 include(${PROJECT_SOURCE_DIR}/cmake/Config.cmake)
 
