Compile CSFML with SFML 3.0

--- a/src/SFML/System/CMakeLists.txt
+++ b/src/SFML/System/CMakeLists.txt
@@ -13,14 +13,8 @@ set(SRC
     ${SRCROOT}/ClockStruct.h
     ${INCROOT}/Clock.h
     ${INCROOT}/InputStream.h
-    ${SRCROOT}/Mutex.cpp
-    ${SRCROOT}/MutexStruct.h
-    ${INCROOT}/Mutex.h
     ${SRCROOT}/Sleep.cpp
     ${INCROOT}/Sleep.h
-    ${SRCROOT}/Thread.cpp
-    ${SRCROOT}/ThreadStruct.h
-    ${INCROOT}/Thread.h
     ${SRCROOT}/Time.cpp
     ${INCROOT}/Time.h
     ${INCROOT}/Types.h
@@ -31,4 +25,4 @@ set(SRC
 # define the csfml-system target
 csfml_add_library(csfml-system
                   SOURCES ${SRC}
-                  DEPENDS sfml-system)
+                  DEPENDS SFML::System)
