--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: SFML/SFML
-        ref: master
+        ref: c89c32d7baa15927a39a161a4ead867c11d5ea21
         path: SFML
 
     - name: Configure SFML CMake
