Build SFML dynamically for the windows release packages

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,10 +1,7 @@
 name: NuGet Release
 
 on:
-    push:
-        branches:
-            - master
-            - 2.6.x
+    push: {}
     workflow_dispatch: {}
 
 concurrency:
